# Co2-Controller-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
inc/: DeviceRegistry.h  FreeRTOSConfig.h  HardwareConst.h  RegisterHandler.h  SubscriptionManager.h  debugPrints.h  hardware_const.h  task_defines.h  test_connection.h
inc/display/: screen.hpp
inc/eeprom/: eeprom_tasks.h  logHandler.h  logger.hpp
inc/fan/: fan_controller.h
inc/i2c/: PicoI2C.h  pressure_register.h
inc/ipstack/: IPStack.h  TLSConnect.hpp  tls_common.h
inc/modbus/: ModbusRegister.h  ModbusRegister_32.h  modbus_controller.h  modbus_register.h
inc/new-wireless/: TLSWrapper.h
inc/pressure/: pressure_register.h
inc/registry/: device_registry.h  register_handler.h
inc/rotary/: rotary.hpp
inc/wireless-tls/: TLSWrapper copy.h  TLSWrapper.h  tls_common.h
inc/wireless_tasks/: api_tasks.h  connection_handler.h
src/: CMakeLists.txt  DeviceRegistry.cpp  RegisterHandler.cpp  SubscriptionManager.cpp  debug.cpp  main.cpp  read_runtime_ctr.cpp  test_main.cpp
src/display/: screen.cpp
src/eeprom/: eeprom.c  eeprom_tasks.cpp  logHandler.cpp  logger.cpp
src/fan/: fan_controller.cpp
src/i2c/: pressure_register.cpp
src/ipstack/: IPStack.cpp  IPStack.h  TLSConnect.cpp  http_test.cpp  picow_tls_client.c  tls_common.c
src/modbus/: ModbusRegister_32.cpp  modbus_controller.cpp  modbus_register.cpp
src/pressure/: pressure_register.cpp
src/registry/: device_registry.cpp  register_handler.cpp
src/rotary/: rotary.cpp
src/wireless-tasks/: api_tasks.cpp  api_tasks.h  connection_handler.cpp  connection_handler.h
src/wireless-tls/: TLSWrapper.cpp  tls_common.c
